==> vi7/rc-switch/RCSwitch.cpp <==
#include "RCSwitch.h"
    #define PROGMEM
    #define memcpy_P(dest, src, num) memcpy((dest), (src), (num))
    #define RECEIVE_ATTR ICACHE_RAM_ATTR
    #define VAR_ISR_ATTR
    #define RECEIVE_ATTR IRAM_ATTR
    #define VAR_ISR_ATTR DRAM_ATTR
    #define RECEIVE_ATTR IRAM_ATTR
    #define VAR_ISR_ATTR
    #define RECEIVE_ATTR
    #define VAR_ISR_ATTR
#define LEVEL_HIGH  1
#define LEVEL_LOW   0

void RCSwitch::enableTransmit(int nTransmitterPin) {
  this->nTransmitterPin = nTransmitterPin;
#if defined(ESP_PLATFORM)
  gpio_set_direction((gpio_num_t)nTransmitterPin, GPIO_MODE_OUTPUT);
#else
  pinMode(this->nTransmitterPin, OUTPUT);
#endif
}

void RCSwitch::transmit(HighLow pulses) {
  #if defined(ESP_PLATFORM)
  uint8_t firstLogicLevel = (this->protocol.invertedSignal) ? LEVEL_LOW : LEVEL_HIGH;
  uint8_t secondLogicLevel = (this->protocol.invertedSignal) ? LEVEL_HIGH : LEVEL_LOW;

  vPortETSIntrLock();
  gpioFastSet(this->nTransmitterPin, firstLogicLevel);
  ets_delay_us(this->protocol.pulseLength * pulses.high);
  gpioFastSet(this->nTransmitterPin, secondLogicLevel);
  ets_delay_us(this->protocol.pulseLength * pulses.low);
  vPortETSIntrUnlock();
  #else
  uint8_t firstLogicLevel = (this->protocol.invertedSignal) ? LOW : HIGH;
  uint8_t secondLogicLevel = (this->protocol.invertedSignal) ? HIGH : LOW;

  digitalWrite(this->nTransmitterPin, firstLogicLevel);
  delayMicroseconds( this->protocol.pulseLength * pulses.high);
  digitalWrite(this->nTransmitterPin, secondLogicLevel);
  delayMicroseconds( this->protocol.pulseLength * pulses.low);
  #endif
}

void RCSwitch::enableReceive(int interrupt) {
  this->nReceiverInterrupt = interrupt;
  this->enableReceive();
}

void RCSwitch::enableReceive() {
  if (this->nReceiverInterrupt != -1) {
    RCSwitch::nReceivedValue = 0;
    RCSwitch::nReceivedBitlength = 0;
#if defined(RaspberryPi) // Raspberry Pi
    wiringPiISR(this->nReceiverInterrupt, INT_EDGE_BOTH, &handleInterrupt);
#else // Arduino
    attachInterrupt(this->nReceiverInterrupt, handleInterrupt, CHANGE);
#endif
  }
}
